<resources>
    <string name="app_name">BackgroundServices</string>
    <string name="msg_location_service_started">   LocationService Started</string>
    <string name="msg_location_service_stopped">   LocationService Stopped</string>
    <string name="no_google_playservice_available">No Google play service available</string>
    <string name="title_alert_no_internet">No internet</string>
    <string name="msg_alert_no_internet">No Internet Message</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="permission_rationale">rational</string>
    <string name="settings">settings</string>
    <string name="permission_denied_explanation">permisson denied</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="update">update</string>
    <string name="Location_Background_update">Background Location  update</string>

    <!-- Messages Preferences -->
    <string name="timely">Timely</string>
    <string name="Timely_Location_Update">Timely Location Update in seconds </string>

    <!-- Sync Preferences -->
    <string name="mock">Mock</string>
    <string name="Allow_Mock_Location">Allow Mock Location</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="Battery">Battery</string>
    <string name="title_activity_add_db">AddDB</string>
    <string name="title_activity_set">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="Background_update">Background</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="on_location_change">On Location change</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
