<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <PreferenceCategory app:title="@string/messages_header">-->

    <!--        <EditTextPreference-->
    <!--            app:key="signature"-->
    <!--            app:title="@string/signature_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--        <ListPreference-->
    <!--            app:defaultValue="reply"-->
    <!--            app:entries="@array/reply_entries"-->
    <!--            app:entryValues="@array/reply_values"-->
    <!--            app:key="reply"-->
    <!--            app:title="@string/reply_title"-->
    <!--            app:useSimpleSummaryProvider="true" />-->

    <!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/settings">
        <SwitchPreferenceCompat
            app:key="@string/Background_update"

            app:title="@string/Location_Background_update" />


        <SwitchPreferenceCompat
            app:key="@string/update"
            app:dependency="@string/Background_update"
            app:title="@string/on_location_change" />

        <EditTextPreference
            app:key="@string/timely"
            app:title="@string/Timely_Location_Update"
            app:dependency="@string/Background_update"
            app:useSimpleSummaryProvider="true"/>
        <!--            app:inputType="time"-->


        <SwitchPreferenceCompat
            app:key="@string/mock"
            app:title="@string/Allow_Mock_Location" />

        <SwitchPreferenceCompat
            app:key="@string/Battery"
            app:title=" battery optimized location reporting" />


        <!--        <SwitchPreferenceCompat-->
        <!--            app:dependency="sync"-->
        <!--            app:key="attachment"-->
        <!--            app:summaryOff="@string/attachment_summary_off"-->
        <!--            app:summaryOn="@string/attachment_summary_on"-->
        <!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>
